--- a/county_fire_status_view_only.html
+++ b/county_fire_status_view_only.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clark County Fire Dept. - Active Units</title>
+    <title>12COFD- Active Units</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @keyframes spin { to { transform: rotate(360deg); } }
@@ -14,11 +14,16 @@
 
     <header class="bg-gray-900 shadow-lg">
         <div class="container mx-auto px-4 py-4">
-            <h1 class="text-3xl font-bold text-center text-red-500">Active Units</h1>
+            <h1 class="text-3xl font-bold text-center text-red-500">CLARK COUNTY FIRE/EMS STATUS</h1>
         </div>
     </header>
 
     <main id="app-container" class="container mx-auto p-4 md:p-8">
+        <!-- Disclaimer -->
+        <div class="text-center text-sm text-gray-400 mb-6 italic">
+            <p>Disclaimer: If a box states there are 3 EMS and 3 FIRE, that doesn't necessarily mean there are 6 personnel. If a person is Fire only that equals 1 in the FIRE Field. If a person is EMS Only, that equals 1 in the EMS Field. If a Person is Fire and EMS, that equals 1 in the EMS field AND 1 in the FIRE field.</p>
+        </div>
+
         <!-- Filter Input -->
         <div class="mb-6">
             <input type="text" id="filter-input" placeholder="Filter by station or crew name..." class="w-full p-3 bg-gray-700 border border-gray-600 rounded-lg text-white focus:outline-none focus:ring-2 focus:ring-red-500 transition-shadow">
@@ -121,21 +126,35 @@
                         formattedTimestamp = `${date} ${time}`;
                     }
 
+                    let emsHtml = '';
+                    if (crew.emsPersonnel > 0) {
+                        emsHtml = `
+                            <div class="text-center">
+                                <p class="font-bold text-blue-400">EMS</p>
+                                <p class="text-2xl font-semibold">${crew.emsPersonnel}</p>
+                            </div>
+                        `;
+                    }
+
+                    let fireHtml = '';
+                    if (crew.firePersonnel > 0) {
+                        fireHtml = `
+                            <div class="text-center">
+                                <p class="font-bold text-orange-400">FIRE</p>
+                                <p class="text-2xl font-semibold">${crew.firePersonnel}</p>
+                            </div>
+                        `;
+                    }
+            
+                    const personnelHtml = emsHtml + fireHtml;
+                    const flexClass = (crew.emsPersonnel > 0 && crew.firePersonnel > 0) ? 'justify-between' : 'justify-center';
+
                     return `
                     <div class="bg-gray-900 rounded-lg shadow-xl p-4 border-l-4 border-green-500 flex flex-col justify-between">
                         <div>
                             <p class="text-xl font-bold text-white">${crew.name}</p>
                             <p class="text-md text-gray-400 mb-2">${crew.stationName}</p>
-                            <div class="flex justify-between text-sm mt-4">
-                                <div class="text-center">
-                                    <p class="font-bold text-blue-400">EMS</p>
-                                    <p class="text-2xl font-semibold">${crew.emsPersonnel || 0}</p>
-                                </div>
-                                <div class="text-center">
-                                    <p class="font-bold text-orange-400">FIRE</p>
-                                    <p class="text-2xl font-semibold">${crew.firePersonnel || 0}</p>
-                                </div>
-                            </div>
+                            ${personnelHtml ? `<div class="flex ${flexClass} w-full text-sm mt-4">${personnelHtml}</div>` : ''}
                         </div>
                         <div class="mt-4 pt-2 border-t border-gray-700 text-right">
                             <p class="text-xs text-gray-500">Updated: ${formattedTimestamp}</p>
