--- a/county_fire_status_view_only.html
+++ b/county_fire_status_view_only.html
@@ -14,7 +14,7 @@
 
     <header class="bg-gray-900 shadow-lg">
         <div class="container mx-auto px-4 py-4">
-            <h1 class="text-3xl font-bold text-center text-red-500">CLARK COUNTY FIRE/EMS STATUS</h1>
+            <h1 class="text-3xl font-bold text-center text-red-500">CLARK COUNTY DEPARTMENTS FIRE/EMS STATUS</h1>
         </div>
     </header>
 
